<resources>
    <string name="app_name">Lab7</string>
    <string name="download_image_text">Download your image</string>
    <string name="task_3">Task 3</string>
    <string name="task_2">Task 2</string>
    <string name="task_1">Task 1</string>
    <string name="downloaded_msg">Downloaded</string>
    <string name="image_content_description">Here you\'ll see downloaded image</string>
    <string name="text_resource">At this point you should open the second app from this lab and then receive a broadcast from the first activity</string>
    <string name="text_not_downloaded">Image is not downloaded yet :(</string>
    <string name="bind_service_message">Tap to bind service</string>
    <string name="path_is_displayed">Path should be displayed now</string>
</resources>