<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="113dp"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:onClick="task1ButtonClicked" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_2"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:layout_editor_absoluteX="158dp"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:onClick="task2ButtonClicked"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_editor_absoluteX="159dp"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:onClick="task3ButtonClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>